# gtest_with_qt_cmake

./: README.md
test/: CMakeLists.txt  main.cpp  tst_case.h
